--- a/package.json
+++ b/package.json
@@ -12,10 +12,15 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.18.2",
     "@react-native-community/masked-view": "^0.1.11",
-    "@react-navigation/native": "^6.1.6",
+    "@react-native-material/core": "^1.3.7",
+    "@react-navigation/bottom-tabs": "^6.5.8",
+    "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.16",
+    "@rneui/base": "^0.0.0-edge.2",
+    "@rneui/themed": "^0.0.0-edge.2",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-camera": "^4.2.1",
     "react-native-gesture-handler": "^2.10.2",
     "react-native-reanimated": "^3.2.0",
     "react-native-safe-area-context": "^4.5.3",
